# exe-by-tauri-project-last

./: Cargo.toml  README.md  tauri.conf.json
.github/workflows/: rust.yml
src/: index.html  main.rs
