[package]
name = "rasfocus"
version = "2.0.0"
description = "RasFocus - Adult Content & Distraction Blocker"
authors = ["RasFocus"]
license = "MIT"
repository = ""
default-run = "rasfocus"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "rasfocus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [
    "shell-open",
    "window-minimize",
    "window-maximize",
    "window-close",
    "window-all",
    "dialog-all",
    "notification-all",
    "system-tray",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
