[package]
name = "rasfocus"
version = "3.0.0"
description = "RasFocus - Adult Content & Distraction Blocker (C++-level keyboard hook)"
authors = ["RasFocus"]
license = "MIT"
repository = ""
default-run = "rasfocus"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "rasfocus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [
    "shell-open",
    "window-minimize",
    "window-maximize",
    "window-close",
    "window-all",
    "dialog-all",
    "notification-all",
    "system-tray",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Windows-only: WinAPI — foreground window + WH_KEYBOARD_LL hook
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",          # GetForegroundWindow, SetWindowsHookExW, WH_KEYBOARD_LL, GetMessageW
    "processthreadsapi", # thread management
    "psapi",            # process info
    "libloaderapi",     # GetModuleHandleW (hook module handle)
    "minwindef",        # LPARAM, WPARAM, LRESULT, HHOOK types
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
